# music-app

./: .dockerignore  .gitignore  .vercelignore  0-initial-plan.md  Dockerfile.vercel  README.md  vercel.json
apps/web/: .env.example  .gitignore  README.md  package-lock.json  package.json
catalog/: README.md  catalog.json  catalog.schema.json  import-report.json
catalog/scores/: a-child-of-the-king.musicxml  a-great-and-mighty-wonder.musicxml  a-lamb-goes-uncomplaining-forth.musicxml  a-mighty-fortress-is-our-god-ein-feste-burg-isorhythmic.musicxml  a-mighty-fortress-is-our-god-ein-feste-burg-rhythmic.musicxml  abide-o-dearest-jesus.musicxml  abide-with-me.musicxml  all-creatures-of-our-god-and-king.musicxml  all-depends-on-our-possessing.musicxml  all-glory-laud-and-honor.musicxml  all-hail-the-power-of-jesus-name.musicxml  all-my-heart-this-night-rejoices.musicxml  all-praise-to-jesus-hallowed-name.musicxml  all-praise-to-thee-my-god-this-night.musicxml  all-who-believe-and-are-baptized.musicxml  amazing-grace.musicxml  (+274 more)
database/: README.md  __init__.py
docs/: 2026-07-21-keyword-targeting.json  catalog-expansion.md  phase-0-report.md  seo-keyword-research.md  source-audit.md
services/render/: README.md  pyproject.toml  requirements.txt
services/render/api/: index.py
services/render/render_service/: __init__.py  app.py  catalog.py  models.py  renderer.py
services/render/tests/: test_api.py
spikes/render/: .gitignore  README.md  pyproject.toml
spikes/render/hymn_render/: __init__.py  cli.py  core.py
spikes/render/tests/: test_render_pipeline.py
(+126 files in other folders)
